# backend/docs/swagger.yaml
@@ -292,7 +292,13 @@ paths:
     get:
       consumes:
       - application/json
-      description: Возвращает топ-10 пользователей по баллам
+      description: Возвращает топ-10 пользователей по баллам, опционально для конкретного
+        курса
+      parameters:
+      - description: ID курса для фильтрации
+        in: query
+        name: course_id
+        type: integer
       produces:
       - application/json
       responses:
@@ -302,6 +308,12 @@ paths:
             items:
               $ref: '#/definitions/model.User'
             type: array
+        "400":
+          description: error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
         "401":
           description: error
           schema:
